[package]
name = "lapin"
version = "0.28.6-alpha"
edition = "2018"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>", "Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "AMQP client library"
repository = "https://github.com/sozu-proxy/lapin"
readme = "README.md"
documentation = "https://docs.rs/lapin"
keywords = ["amqp", "rabbitmq", "mio", "futures"]
categories = ["database"]
license = "MIT"
build = "build.rs"

[workspace]
members = [".", "futures/"]

[features]
default    = ["native-tls"]
futures    = ["futures-core"]
native-tls = ["amq-protocol/native-tls"]
openssl    = ["amq-protocol/openssl"]
rustls     = ["amq-protocol/rustls"]

[build-dependencies]
amq-protocol-codegen = { version = "^3.1", registry = "crates-io" }
serde_json = { version = "^1.0", registry = "crates-io" }

[dependencies.amq-protocol]
registry = "crates-io"
version = "^3.1"
default-features = false

[dependencies.futures-core]
registry = "crates-io"
version = "^0.3"
optional = true

[dependencies]
crossbeam-channel = { version = "^0.4", registry = "crates-io" }
log = { version = "^0.4", registry = "crates-io" }
mio = { version = "^0.6", registry = "crates-io" }
parking_lot = { version = "^0.10", registry = "crates-io" }

[dev-dependencies]
env_logger = { version = "^0.7", registry = "crates-io" }
futures-executor = { version = "^0.3", registry = "crates-io" }
futures-util = { version = "^0.3", registry = "crates-io" }
futures-test = {version = "^0.3", registry = "crates-io" }
tcp-stream = {version = "^0.8", registry = "crates-io" }

[[example]]
name = "custom_tls_connection"
required-features = ["native-tls"]

[[example]]
name = "pubsub_futures"
required-features = ["futures"]
