[package]
name = "lapin-futures"
version = "0.28.6-alpha"
edition = "2018"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>", "Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
repository = "https://github.com/sozu-proxy/lapin"
readme = "README.md"
documentation = "https://docs.rs/lapin-futures"
description = "AMQP client library with a futures based API"
keywords = ["amqp", "rabbitmq", "futures", "tokio"]
categories = ["database"]
license = "MIT"

[features]
default    = ["native-tls"]
native-tls = ["lapin/native-tls"]
openssl    = ["lapin/openssl"]
rustls     = ["lapin/rustls"]

[dependencies.lapin]
path = "../"
registry = "chronicled-platform-v2"
version = "0.28.6-alpha"
default-features = false

[dependencies]
futures = {version = "^0.1", registry = "crates-io" }
log = {version = "^0.4", registry = "crates-io" }

[dev-dependencies]
env_logger = {version = "^0.7", registry = "crates-io" }
